Fixes pre focus gat (#123)
* MIJN-1114 show product title instead of title on aanvagen

* MIJN-1116 Change title of received aanvraag melding

* MIJN-1117 Show aanvraag date for ongoing aanvragen in the aanvragen list page

* MIJN-1118 Fix aanvragen alignment on the dashboard in responsive mode

* MIJN-1099 Fixed line break on long titles in the chapter panel and corrected spellin g issue  in chapter title werk en in komen

* Quickfix in aanvragen title choice

* MIJN-1100 Added productTitle to the update title

* MIJN-1101 Added whitespace to external links in aanvraag descriptions

* MIJN-1104 Removed the reason from the aanvraag summary

* Added extra mock data

* Update DataLinkTable.tsx

--- a/src/components/MyChaptersPanel/MyChaptersPanel.module.scss
+++ b/src/components/MyChaptersPanel/MyChaptersPanel.module.scss
@@ -32,6 +32,11 @@
 
     @include media-query('<=tablet') {
       padding-left: 0;
+
+      min-width: 18.5rem;
+      &:nth-child(even) {
+        margin-left: 0;
+      }
     }
   }
 
